Fix T51198: Crash with new Datablock ID Properties